Update bloop-test skill: setup and troubleshooting improvements